fixed some spacing, sizes and fonts

--- a/app.css
+++ b/app.css
@@ -133,7 +133,7 @@ p {
 
 html,body {
   color: #555;
-	background-color: #E0E0E0;
+  background-color: #E0E0E0;
 }
 
 
@@ -144,6 +144,18 @@ html,body {
 .project-navigation .project .title {
   border-top-left-radius:3px;
   border-top-right-radius:3px;
+}
+
+.slides .navigation a.first,
+.article-navigation .article-link.first{
+  border-top-left-radius:3px;
+  border-bottom-left-radius:3px;
+}
+
+.slides .navigation a.last,
+.article-navigation .article-link.last{
+  border-top-right-radius:3px;
+  border-bottom-right-radius:3px;
 }
 
 .darker {
@@ -230,26 +242,20 @@ html,body {
   margin: 0 auto;
   z-index: 1000;
   overflow: none;
-	width: 800px;
+	width: 844px;
 	padding: 0;
 }
 
 #menu a {
   color: #444;
   /*background: rgba(0,0,0, 0.2);*/
-  padding: 7px 15px;
+  padding: 30px 42px;
   font-weight: 700;
   font-family: 'Open Sans';
   z-index: 2000;
-
-/*  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;*/
-  padding: 30px 42px;
   display: block;
   float: left;
   margin-right: 1px;
-	width: 134px;
 }
 
 #menu a:first-child{
@@ -261,16 +267,14 @@ html,body {
 }
 
 #menu a.title {
-  padding-left: 0px;
   /*margin-right: 30px;*/
 
-  padding: 30px 0;
-  padding-right: 70px;
+  padding: 30px 70px 30px 25px;
   font-size: 26px;
   color: rgba(0,0,0, 0.8);
   border-bottom: 10px solid #0C2331;
   background: none;
-	width: 260px;
+	width: 290px;
 }
 
 /* Active states */
@@ -332,6 +336,12 @@ html,body {
   font-size: 16px;
   overflow:auto;
 	background-color: #fff;
+	padding-bottom: 30px;
+}
+
+#main.home,
+#main.articles{
+	padding-bottom: 0;
 }
 
 #post .inner  {
@@ -400,18 +410,19 @@ html,body {
   overflow: auto;
 }
 
-.slides .navigation a {
+.slides .navigation a,
+.article-navigation .article-link {
   display: block;
   float: left;
   /*margin-right: 20px;*/
   margin-right: 1px;
-  width: 70px;
+  width: 60px;
   font-family: 'Open Sans';
   font-weight: 700;
   height: 40px;
   text-align: center;
   line-height: 40px;
-  font-size: 16px;
+  font-size: 14px;
   background: #0C2331;
   color: #fff;
   opacity: 0.7;
@@ -452,7 +463,7 @@ html,body {
   font-family: 'Open Sans';
   top: 140px;
   left: 0px;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 .slides .slide .teaser {
@@ -464,6 +475,7 @@ html,body {
   left: 0px;
   font-size: 25px;
   line-height: 40px;
+	width: 700px;
 }
 
 
@@ -497,7 +509,7 @@ and your footer gets pushed down a bit more, creating vertical scroll bars in th
 
 #container { 
   min-width: 800px;
-  }
+}
 
 #footer {
   font-family: 'OpenSans';
@@ -546,11 +558,13 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   Projects
 ---------------------------------------------*/
 
+.projects{
+}
+
 .project-navigation {
   width: 800px;
   margin: 0 auto;
-  padding: 30px 0;
-  padding-bottom: 50px;
+	padding: 30px 0 50px;
 }
 
 .project-navigation .project {
@@ -559,7 +573,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   display: block;
   background: #31374b;
   margin-bottom: 20px;
-  margin-right: 10px;
+  margin-right: 15px;
   opacity: 1.0;
 	float: left;
 }
@@ -594,7 +608,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 
 }
 
-.article-navigation .article-link {
+/*.article-navigation .article-link {
 
   position: relative;
   display: block;
@@ -616,6 +630,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 
 .article-link .number {
   display: none;
+  font-family:'Open Sans';
   line-height: 30px;
 	color: #fff;
 }
@@ -650,7 +665,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
 
 .article-navigation .article-link.active:hover {
   opacity: 1.0;
-}
+}*/
 
 .article-wrapper {
   padding-bottom: 50px;
@@ -705,6 +720,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   background: #E0E0E0;
   color: #0C2331;
   border-bottom: 1px solid #ccc;
+	margin-bottom: 30px;
 }
 
 .intro .title {
@@ -727,7 +743,7 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   opacity: 0.7;
   font-family: 'Open Sans';
   font-weight: 300;
-  font-size: 25px;
+  font-size: 22px;
   line-height: 1.5em;
 }
 
